--- a/26dec/assets/css/style.css
+++ b/26dec/assets/css/style.css
@@ -4,6 +4,7 @@
 }
 
 h1 {
+  text-align: center;
   color: #0000ff;
   font-size: 50px;
   background-color: black;
@@ -11,33 +12,41 @@ h1 {
   /* padding: 10px 20px 30px 40px; */
   /* text-shadow: 0px 0px yellow; */
   text-shadow: 3px 10px 6px yellow;
-  margin-bottom: 22px;
 }
-
-div {
-  width: 120px;
-  height: 30px;
+.boxes {
+  width: 100%;
+  height: 50px;
+  background-color: cadetblue;
   font-size: 20px;
   color: white;
+}
+
+.box {
+  width: 130px;
+  height: 30px;
   background-color: #2be2c5ab;
-  padding: 20px;
-  margin-top: 40px;
-  margin-left: 20px;
+  display: inline-block;
+  padding: 10px;
+  /* margin-top: 40px; */
+  /* margin-left: auto; */
   text-align: center;
-  display: inline;
   border-left: 4px solid rgb(29, 199, 131);
 }
 
-div:hover {
+.box:hover {
   /* background-color: aqua; */
   box-shadow: 10px 10px 11px rgb(194, 41, 79);
 }
 
 span {
+  margin-top: 30px;
+  display: inline-block;
   background-color: azure;
   padding: 20px;
   /* border: 1px solid red; */
   border: 3px dotted red;
+  width: 100px;
+  height: 25px;
 }
 
 span:hover {
@@ -45,9 +54,20 @@ span:hover {
   border-radius: 30px;
 }
 
-.grad {
-  width: 100px;
+h3 {
+  width: 400px;
   height: 100px;
-  background-image: linear-gradient(red, green);
+  padding: 20px;
+  text-align: center;
+  font-size: 30px;
+  display: inline-block;
+}
+
+.grad {
+  background-image: linear-gradient(rgb(43, 172, 80), rgb(60, 85, 207));
   /* background-image: linear-gradient(to left bottom, red,white, green); */
+}
+
+.grad1 {
+  background-image: linear-gradient(to left bottom, red, white, green);
 }
